crates/cadmus-core/tests/snapshots/conversations__snapshot_plain_qa.snap
---
source: crates/cadmus-core/tests/conversations.rs
expression: messages
---
[
  {
    "role": "user",
    "content": [
      {
        "type": "text",
        "text": "look up TODOs in main.rs"
      }
    ]
  },
  {
    "role": "assistant",
    "content": [
      {
        "type": "text",
        "text": "There is one TODO at line 42."
      }
    ]
  }
]
