crates/cadmus-core/tests/snapshots/conversations__snapshot_single_tool_call.snap
---
source: crates/cadmus-core/tests/conversations.rs
expression: messages
---
[
  {
    "role": "user",
    "content": [
      {
        "type": "text",
        "text": "look up TODOs in main.rs"
      }
    ]
  },
  {
    "role": "assistant",
    "content": [
      {
        "type": "tool_call",
        "call": {
          "id": "call_1",
          "name": "read_file",
          "arguments": {
            "path": "src/main.rs"
          }
        }
      }
    ]
  },
  {
    "role": "tool",
    "content": [
      {
        "type": "text",
        "text": "contents of src/main.rs"
      }
    ],
    "tool_call_id": "call_1"
  },
  {
    "role": "assistant",
    "content": [
      {
        "type": "text",
        "text": "The file has one TODO at line 42."
      }
    ]
  }
]
